Adding a class to make sure full post styles only take effect in full post view.
Sometimes these styles would show up in the post stream, causing visual
bugs.

--- a/client/reader/full-post/_style.scss
+++ b/client/reader/full-post/_style.scss
@@ -324,7 +324,7 @@
 }
 
 // Discover-Specific Full Post View Styles
-.blog-53424024 .reader__full-post-content {
+.reader__full-post.blog-53424024 .reader__full-post-content {
 
 	.intro {
 		font-size: 20px;
