--- a/client/my-sites/upgrades/checkout-thank-you/style.scss
+++ b/client/my-sites/upgrades/checkout-thank-you/style.scss
@@ -242,11 +242,22 @@
 	overflow: hidden;
 
 	.google-voucher-dialog__header {
+		display: flex;
+		align-items: center;
 		margin: -24px -24px 0;
-		padding: 40px;
+		padding: 20px 24px 24px;
 		background-color: #fbfcfd;
 		box-shadow: 0 1px 0 0 rgba(200, 215, 225, 0.5),
 			0 1px 0 #e9eff3;
+
+		.google-voucher-dialog__header__image {
+			width: (149 / 482) * 100%;
+			margin-right: 20px;
+		}
+
+		.google-voucher-dialog__header__text {
+			flex: 1;
+		}
 	}
 
 	.google-voucher-dialog__body {
