--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -322,6 +322,7 @@
 @import 'post-editor/editor-permalink/style';
 @import 'post-editor/editor-post-formats/style';
 @import 'post-editor/editor-post-type/style';
+@import 'post-editor/editor-post-type-unsupported/style';
 @import 'post-editor/editor-revisions/style';
 @import 'post-editor/editor-sharing/style';
 @import 'post-editor/editor-sidebar/style';
