--- a/client/my-sites/exporter/style.scss
+++ b/client/my-sites/exporter/style.scss
@@ -24,15 +24,15 @@
 	float: right;
 }
 
-.exporter__placeholder-text {
-	padding-left: 24px;
-	padding-right: 24px;
-	margin-bottom: 24px;
-	height: 32px;
 
-	color: transparent;
-	background-color: lighten( $gray, 30% );
-	animation: loading-fade 1.6s ease-in-out infinite;
+.exporter__placeholder-select {
+	animation: exporter__placeholder-select-fade 1.6s ease-in-out infinite;
+
+	@keyframes exporter__placeholder-select-fade {
+		0% { opacity: .2; }
+		50% { opacity: .8; }
+		100% { opacity: .2; }
+	}
 }
 
 .exporter__advanced-settings {
