--- a/client/my-sites/themes/style.scss
+++ b/client/my-sites/themes/style.scss
@@ -277,6 +277,12 @@
 	}
 }
 
+.themes__sheet_404 {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
 .footer__line {
 	color: lighten( $gray, 20% );
 	border-top: 1px solid lighten( $gray, 20% );
