GuidedTours: add steps for site preview
This adds a tour step that nudges the user to open their site's
preview, and another one for closing it again. These steps are skipped
if `preview-layout` is disabled.

As part of this -- to guard against problems when there was no site
selected, so that preview wouldn't work -- this also introduces a
timeout for finding the next step's target, if there is one. If this
takes longer than a few seconds, we end the tour gracefully, tell the
user, and record a tracks event with an error message.

--- a/client/layout/guided-tours/style.scss
+++ b/client/layout/guided-tours/style.scss
@@ -136,3 +136,12 @@ $zoom-scale: 5; // the multiplier determining the size of the animated rings
 .guided-tours__bullseye-ring:after {
 	animation-delay: #{ $animation-speed / 4 };
 }
+
+// the pure text representation of the bullseye dot
+.guided-tours__bullseye-text {
+	position: relative;
+		top: 3px;
+	font-style: normal;
+	font-size: 190%;
+	line-height: 0;
+}
