Update code as per PR comments.
Makes more sense to have this in a single rule, to account for RTL languages too.

--- a/client/signup/navigation-link/style.scss
+++ b/client/signup/navigation-link/style.scss
@@ -1,10 +1,7 @@
 .navigation-link {
 	cursor: pointer;
 	display: inline-block;
-	margin: 24px auto;
+	margin: 24px 12px;
 	text-align: center;
 }
 
-.navigation-link:nth-child(2):last-child {
-	margin-left:24px;
-}
