--- a/client/my-sites/themes/style.scss
+++ b/client/my-sites/themes/style.scss
@@ -8,7 +8,6 @@
 		width: 100%;
 	}
 
-
 	h1 {
 		display: block;
 		font-weight: 300;
@@ -388,18 +387,42 @@
 }
 
 .themes__sheet-preview-link {
+	display: flex;
 	position: absolute;
-		top: -30px;
-	color: $white;
-	text-transform: uppercase;
+		top: -28px;
+	color: lighten( $gray, 30% );
 	cursor: pointer;
+	transition: all ease-in-out 100ms;
+
+	&:hover {
+		color: $white;
+	}
+
+	.gridicon {
+		margin: 0 8px 0 -4px;
+	}
+
+	.themes__sheet-preview-link-text {
+		font-size: 12px;
+		margin-top: 2px;
+		text-transform: uppercase;
+	}
 
 	@include breakpoint( "<660px" ) {
 		color: transparentize( $gray, 0.2 );
 		top: 90%;
 		margin-left: 30px;
 
-		span.themes__sheet-preview-link-text {
+		&:hover {
+			color: $gray-dark;
+		}
+
+		.gridicon {
+			width: 24px;
+			height: 24px;
+		}
+
+		.themes__sheet-preview-link-text {
 			display: none;
 		}
 	}
