Reader: use the `header_image` on Recommendation cards
When present, that is…

Considering optimizing this case to pull from the "featured image"
logic for regular Reader posts. It seems like only ~15-20% of sites
have a `header_image` so another layer of fallback logic would be
beneficial.

--- a/client/reader/start/style.scss
+++ b/client/reader/start/style.scss
@@ -74,7 +74,13 @@
 	}
 
 	.reader-start-card__hero {
-		background: url( "images/reader/hero.jpg" ); // Temp hero image
+		background-repeat: no-repeat;
+		background-position: center center;
+		background-image: url( "images/reader/hero.jpg" ); // Default hero image
+		-webkit-background-size: cover;
+		-moz-background-size: cover;
+		-o-background-size: cover;
+		background-size: cover;
 		height: 100px;
 		margin: -24px;
 	}
