--- a/client/components/search/style.scss
+++ b/client/components/search/style.scss
@@ -40,7 +40,19 @@
 		position: absolute;
 			bottom: 0;
 			top: 50%;
+
+		&:not(.ltr):not(.rtl) {
 			right: 0;
+		}
+
+		&.ltr {
+			right: 0 #{"/*rtl:ignore*/"};
+		}
+
+		&.rtl {
+			left: 0 #{"/*rtl:ignore*/"};
+		}
+
 		margin-top: -12px;
 		width: 60px;
 		cursor: pointer;
@@ -83,12 +95,34 @@
 	position: absolute;
 		bottom: 0;
 		top: 0;
+
+	&:not(.ltr):not(.rtl) {
 		right: 0;
+	}
+
+	&.ltr {
+		right: 0 #{"/*rtl:ignore*/"};
+	}
+
+	&.rtl {
+		left: 0 #{"/*rtl:ignore*/"};
+	}
+
 	// matching dropdown-selector
 	z-index: z-index( 'root', '.search.is-pinned' );
 
 	.search-open__icon {
-		right: 0;
+		&:not(.ltr):not(.rtl) {
+			right: 0;
+		}
+
+		&.ltr {
+			right: 0 #{"/*rtl:ignore*/"};
+		}
+
+		&.rtl {
+			left: 0 #{"/*rtl:ignore*/"};
+		}
 	}
 
 	.search__input[type="search"] {
@@ -111,8 +145,21 @@
 
 	@include breakpoint( "<660px" ) {
 		opacity: 0;
-		left: 0;
-		padding-left: 50px;
+
+		&:not(.ltr):not(.rtl) {
+			right: 0;
+			padding-left: 50px;
+		}
+
+		&.ltr {
+			left: 0 #{"/*rtl:ignore*/"};
+			padding-left: 50px #{"/*rtl:ignore*/"};
+		}
+
+		&.rtl {
+			right: 0 #{"/*rtl:ignore*/"};
+			padding-right: 50px #{"/*rtl:ignore*/"};
+		}
 	}
 
 	&::-webkit-search-cancel-button {
@@ -127,12 +174,36 @@
 
 // When search input is opened
 .search.is-open {
-	margin-right: 0 !important;
+
+	&:not(.ltr):not(.rtl) {
+		margin-right: 0 !important;
+	}
+
+	&.ltr {
+		margin-right: 0 #{"/*rtl:ignore*/"} !important;
+	}
+
+	&.rtl {
+		margin-left: 0 #{"/*rtl:ignore*/"} !important;
+	}
+
 	width: 100%;
 
 	.search-open__icon {
 		color: darken( $gray, 30% );
-		left: 0;
+
+		&:not(.ltr):not(.rtl) {
+			left: 0;
+		}
+
+		&.ltr {
+			left: 0 #{"/*rtl:ignore*/"};
+		}
+
+		&.rtl {
+			right: 0 #{"/*rtl:ignore*/"};
+		}
+
 	}
 
 	.search-close__icon {
@@ -153,11 +224,34 @@
 	display: none;
 	position: absolute;
 		top: 50%;
+
+	&:not(.ltr):not(.rtl) {
 		left: 30px;
+	}
+
+	&.ltr {
+		left: 30px #{"/*rtl:ignore*/"};
+	}
+
+	&.rtl {
+		right: 30px #{"/*rtl:ignore*/"};
+	}
+
 	transform: translate( -50%, -50% );
 
 	@include breakpoint( "<660px" ) {
-		left: 25px;
+
+		&:not(.ltr):not(.rtl) {
+			left: 25px;
+		}
+
+		&.ltr {
+			left: 25px #{"/*rtl:ignore*/"};
+		}
+
+		&.rtl {
+			right: 25px #{"/*rtl:ignore*/"};
+		}
 	}
 }
 
