Reader: add `background-size: cover` to Hero image
On the Recommendation cards.

--- a/client/reader/start/style.scss
+++ b/client/reader/start/style.scss
@@ -169,7 +169,8 @@
 }
 
 .reader-start-card__hero {
-	background: lighten( $gray, 30% ); // Background to be used if no image
+	background-color: lighten( $gray, 30% ); // Background to be used if no image
+	background-size: cover;
 	height: 70px;
 	margin: -24px;
 }
