--- a/client/my-sites/themes/style.scss
+++ b/client/my-sites/themes/style.scss
@@ -103,27 +103,18 @@
 	display: flex;
 	flex-direction: row;
 
-	@include breakpoint( "<660px" ) {
+	@include breakpoint( "<960px" ) {
 		flex-direction: column-reverse;
 	}
 }
 
-.themes__sheet-column-left {
-	display: flex;
-	width: 50%;
-	flex-direction: column;
-
-	@include breakpoint( "<660px" ) {
-		width: 100%;
-	}
-}
-
+.themes__sheet-column-left,
 .themes__sheet-column-right {
 	display: flex;
 	width: 50%;
 	flex-direction: column;
 
-	@include breakpoint( "<660px" ) {
+	@include breakpoint( "<960px" ) {
 		width: 100%;
 	}
 }
@@ -131,7 +122,7 @@
 .themes__sheet-action-bar {
 	height: 50px;
 
-	@include breakpoint( "<660px" ) {
+	@include breakpoint( "<960px" ) {
 		&.card {
 			margin: 0 0 1px 0;
 		}
@@ -144,7 +135,7 @@
 		right: 50%;
 	margin-right: 20px;
 
-	@include breakpoint( "<660px" ) {
+	@include breakpoint( "<960px" ) {
 		margin-right: 0;
 		position: absolute;
 			top: 5px;
@@ -176,7 +167,7 @@
 	// also x-browser issues, so it's smaller than 4:3 proper
 	min-height: 36.15vw; // 36.75vw would be correct, but Safari is slightly off
 
-	@include breakpoint( "<660px" ) {
+	@include breakpoint( "<960px" ) {
 		position: relative;
 		top: 0;
 		width: 100%;
@@ -247,7 +238,7 @@
 		margin-bottom: 0;
 	}
 
-	@include breakpoint( "<660px" ) {
+	@include breakpoint( "<960px" ) {
 		flex-wrap: wrap;
 	}
 
@@ -259,7 +250,7 @@
 	.button {
 		flex: 0 0 auto;
 
-		@include breakpoint( "<660px" ) {
+		@include breakpoint( "<960px" ) {
 			flex: 1 1 100%;
 			margin-top: 20px;
 			text-align: center;
