Remove code for forcing RTL on LTR pages.

--- a/client/components/search/style.scss
+++ b/client/components/search/style.scss
@@ -41,16 +41,12 @@
 			bottom: 0;
 			top: 50%;
 
-		&:not(.ltr):not(.rtl) {
+		&:not(.ltr) {
 			right: 0;
 		}
 
 		&.ltr {
 			right: 0 #{"/*rtl:ignore*/"};
-		}
-
-		&.rtl {
-			left: 0 #{"/*rtl:ignore*/"};
 		}
 
 		margin-top: -12px;
@@ -96,7 +92,7 @@
 		bottom: 0;
 		top: 0;
 
-	&:not(.ltr):not(.rtl) {
+	&:not(.ltr) {
 		right: 0;
 	}
 
@@ -104,24 +100,16 @@
 		right: 0 #{"/*rtl:ignore*/"};
 	}
 
-	&.rtl {
-		left: 0 #{"/*rtl:ignore*/"};
-	}
-
 	// matching dropdown-selector
 	z-index: z-index( 'root', '.search.is-pinned' );
 
 	.search-open__icon {
-		&:not(.ltr):not(.rtl) {
+		&:not(.ltr) {
 			right: 0;
 		}
 
 		&.ltr {
 			right: 0 #{"/*rtl:ignore*/"};
-		}
-
-		&.rtl {
-			left: 0 #{"/*rtl:ignore*/"};
 		}
 	}
 
@@ -146,7 +134,7 @@
 	@include breakpoint( "<660px" ) {
 		opacity: 0;
 
-		&:not(.ltr):not(.rtl) {
+		&:not(.ltr) {
 			right: 0;
 			padding-left: 50px;
 		}
@@ -154,11 +142,6 @@
 		&.ltr {
 			left: 0 #{"/*rtl:ignore*/"};
 			padding-left: 50px #{"/*rtl:ignore*/"};
-		}
-
-		&.rtl {
-			right: 0 #{"/*rtl:ignore*/"};
-			padding-right: 50px #{"/*rtl:ignore*/"};
 		}
 	}
 
@@ -175,7 +158,7 @@
 // When search input is opened
 .search.is-open {
 
-	&:not(.ltr):not(.rtl) {
+	&:not(.ltr) {
 		margin-right: 0 !important;
 	}
 
@@ -183,27 +166,18 @@
 		margin-right: 0 #{"/*rtl:ignore*/"} !important;
 	}
 
-	&.rtl {
-		margin-left: 0 #{"/*rtl:ignore*/"} !important;
-	}
-
 	width: 100%;
 
 	.search-open__icon {
 		color: darken( $gray, 30% );
 
-		&:not(.ltr):not(.rtl) {
+		&:not(.ltr) {
 			left: 0;
 		}
 
 		&.ltr {
 			left: 0 #{"/*rtl:ignore*/"};
 		}
-
-		&.rtl {
-			right: 0 #{"/*rtl:ignore*/"};
-		}
-
 	}
 
 	.search-close__icon {
@@ -225,7 +199,7 @@
 	position: absolute;
 		top: 50%;
 
-	&:not(.ltr):not(.rtl) {
+	&:not(.ltr) {
 		left: 30px;
 	}
 
@@ -233,24 +207,16 @@
 		left: 30px #{"/*rtl:ignore*/"};
 	}
 
-	&.rtl {
-		right: 30px #{"/*rtl:ignore*/"};
-	}
-
 	transform: translate( -50%, -50% );
 
 	@include breakpoint( "<660px" ) {
 
-		&:not(.ltr):not(.rtl) {
+		&:not(.ltr) {
 			left: 25px;
 		}
 
 		&.ltr {
 			left: 25px #{"/*rtl:ignore*/"};
-		}
-
-		&.rtl {
-			right: 25px #{"/*rtl:ignore*/"};
 		}
 	}
 }
