--- a/client/blocks/reader-related-card-v2/style.scss
+++ b/client/blocks/reader-related-card-v2/style.scss
@@ -141,6 +141,7 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 
 	.reader-related-card-v2__meta {
 		display: flex;
+		height: 38px;
 		margin-bottom: 13px;
 		z-index: z-index( '.reader-related-card-v2.card', '.reader-related-card-v2__meta' );
 		width: 100%;
@@ -169,6 +170,10 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 
 	&.has-thumbnail {
 
+		.reader-related-card-v2__meta {
+			margin-bottom: 16px;
+		}
+
 		.reader-related-card-v2__site-info {
 
 			@media #{$reader-related-card-v2-breakpoint-small} {
@@ -189,11 +194,8 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 		}
 	}
 
-	&.has-excerpt {
-
-		.reader-related-card-v2__title {
-			margin-bottom: 9px;
-		}
+	.reader-related-card-v2__title {
+		margin-bottom: 7px;
 	}
 }
 
@@ -215,12 +217,16 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 
 	&.is-same-site {
 
+		.reader-related-card-v2 {
+			margin-top: -6px;
+		}
+
 		.reader-related-card-v2__meta {
 			display: none !important; // Hides meta info from "More In Site"
 		}
 
 		.reader-related-card-v2__featured-image {
-			margin: 0 0 19px;
+			margin: 0 0 14px;
 		}
 
 		.has-thumbnail {
@@ -248,6 +254,10 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 				flex: 3;
 			}
 		}
+
+		.reader-related-card-v2.has-thumbnail {
+			margin-top: 0;
+		}
 	}
 
 	&.is-other-site {
@@ -268,47 +278,6 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 				max-height: 104px;
 			}
 		}
-
-		.has-thumbnail {
-
-			.reader-related-card-v2__site-info {
-
-				@media #{$reader-related-card-v2-breakpoint-medium} {
-					margin-top: 20px;
-				}
-
-				@media #{$reader-related-card-v2-breakpoint-small} {
-					margin-top: 20px;
-				}
-			}
-
-			.reader-related-card-v2__post {
-				max-height: 104px;
-
-				@media #{$reader-related-card-v2-breakpoint-medium} {
-					max-height: 125px;
-				}
-
-				@media #{$reader-related-card-v2-breakpoint-small} {
-					max-height: 130px;
-				}
-
-				@include breakpoint( "<480px" ) {
-					max-height: 121px;
-				}
-			}
-		}
-
-		.reader-related-card-v2 {
-			margin-top: -5px;
-		}
-
-		.reader-related-card-v2__featured-image {
-			margin: 0 0 19px;
-		}
-	}
-
-	&.is-other-site {
 
 		.reader-related-card-v2__featured-image {
 
@@ -344,10 +313,21 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 			}
 		}
 
-
 		.has-thumbnail {
 
+			.reader-related-card-v2__site-info {
+
+				@media #{$reader-related-card-v2-breakpoint-medium} {
+					margin-top: 20px;
+				}
+
+				@media #{$reader-related-card-v2-breakpoint-small} {
+					margin-top: 20px;
+				}
+			}
+
 			.reader-related-card-v2__meta {
+				margin-bottom: 19px;
 
 				@media #{$reader-related-card-v2-breakpoint-medium} {
 					margin-top: -4px;
@@ -363,17 +343,32 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 			}
 
 			.reader-related-card-v2__post {
+				max-height: 106px;
 
 				@media #{$reader-related-card-v2-breakpoint-medium} {
 					flex: 3;
 					margin-top: 25px;
+					max-height: 125px;
 				}
 
 				@media #{$reader-related-card-v2-breakpoint-small} {
 					flex: 3;
 					margin-top: 25px;
+					max-height: 130px;
+				}
+
+				@include breakpoint( "<480px" ) {
+					max-height: 121px;
 				}
 			}
+		}
+
+		.reader-related-card-v2 {
+			margin-top: -5px;
+		}
+
+		.reader-related-card-v2__featured-image {
+			margin: 0 0 14px;
 		}
 	}
 
@@ -454,7 +449,7 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 	border: 0;
 	border-radius: 0;
 	margin-bottom: 12px;
-	margin-top: -6px;
+	margin-top: -4px;
 	position: relative;
 	padding: 0;
 	z-index: z-index( '.reader-related-card-v2__meta', '.follow-button' );
@@ -487,7 +482,7 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 
 .reader-related-card-v2__featured-image {
 	border: 1px solid lighten( $gray, 30% );
-	min-height: 90px;
+	min-height: 78px;
 
 	@media #{$reader-related-card-v2-breakpoint-small} {
 		flex: 1;
@@ -545,11 +540,11 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 }
 
 .reader-related-card-v2__excerpt {
-	line-height: 1.6;
 	word-wrap: break-word;
 
 	&.post-excerpt {
 		font-size: 15px;
+		line-height: 25px;
 		overflow : hidden;
 		text-overflow: ellipsis;
 		display: -webkit-box;
