--- a/client/reader/search-stream/style.scss
+++ b/client/reader/search-stream/style.scss
@@ -1,4 +1,5 @@
 .search-stream__intro {
+
 	@include breakpoint( "<660px" ) {
 		margin-left: 16px;
 	}
@@ -101,7 +102,7 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 		max-height: 208px;
 
 		@media #{$reader-related-card-v2-breakpoint-medium} {
-			max-height: 206px;
+			max-height: 105px;
 		}
 
 		@include breakpoint( "<660px" ) {
@@ -130,15 +131,19 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 				max-height: 104px;
 			}
 		}
+
+		.reader-related-card-v2__meta {
+			margin-bottom: 18px;
+		}
 	}
 
 	.reader-related-card-v2__featured-image {
-		margin: 0 0 17px;
+		margin: 0 0 14px;
 	}
 
 	.reader-related-card-v2__meta {
 		align-items: flex-start;
-		margin-bottom: 16px;
+		margin-bottom: 12px;
 
 		.reader-related-card-v2__byline,
 		.reader-related-card-v2__byline-author,
